Update layout: validator-detail (fix spacing)

--- a/src/app/pages/proposal/proposal-detail/summary-info/summary-info.component.scss
+++ b/src/app/pages/proposal/proposal-detail/summary-info/summary-info.component.scss
@@ -24,7 +24,7 @@
   background-color: var(--bs-gray-700);
   border-radius: 4px;
   ::ng-deep {
-    & > * {
+    & * {
       color: var(--aura-white) !important;
     }
     a {
